# agent-kiwi

./: .gitignore  DESIGN_NOTES.md  DIARY.md  README.md  pyproject.toml  simulate_week.py
.github/workflows/: eval-monthly.yml
assets/: week_output.txt
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  data.ts  decision.ts  index.css
dashboard/src/components/: ClientSidebar.tsx  DayFeed.tsx  Icons.tsx  RightPanel.tsx  WeekTimeline.tsx
data/: clients.json
eval/: __init__.py  badge.json  cases.jsonl  judge.py  run.py
kiwi/: __init__.py  agent.py  coach.py  domain.py  memory.py  resilience.py  skill_loader.py
kiwi/skills/daily-checkin/: SKILL.md
kiwi/skills/flag-disengagement/: SKILL.md
kiwi/skills/flag-health-risk/: SKILL.md
kiwi/skills/log-client-observation/: SKILL.md
kiwi/skills/respond-to-client/: SKILL.md
kiwi/skills/summarize-for-coach/: SKILL.md
kiwi/skills/weekly-progress-report/: SKILL.md
tests/: test_agent_loop.py  test_coach_digest.py  test_memory_confidence.py  test_memory_isolation.py  test_resilience.py
tools/: render_demo_gif.py
